<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">picker images</string>
    <string name="pick_images">Pick Images</string>
    <string name="how_choose_image">How choose image</string>
    <string name="gallery">Gallery</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="phone_number">رقم الهاتف</string>
    <string name="show_more">عرض المزيد</string>
    <string name="show_less">عرض اقل</string>
    <string name="full_text">إذا كنت تحتاج إلى عدد أكبر من الفقرات يتيح لك مولد النص العربى زيادة عدد الفقرات كما تريد، النص لن يبدو مقسما ولا يحوي أخطاء لغوية، مولد النص العربى مفيد لمصممي المواقع على وجه الخصوص، حيث يحتاج العميل فى كثير من الأحيان أن يطلع على صورة حقيقية لتصميم الموقع.
ومن هنا وجب على المصمم أن يضع نصوصا مؤقتة على التصميم ليظهر للعميل الشكل كاملاً،دور مولد النص العربى أن يوفر على المصمم عناء البحث عن نص بديل لا علاقة له بالموضوع الذى يتحدث عنه التصميم فيظهر بشكل لا يليق.
هذا النص يمكن أن يتم تركيبه على أي تصميم دون مشكلة فلن يبدو وكأنه نص منسوخ، غير منظم، غير منسق، أو حتى غير مفهوم. لأنه مازال نصاً بديلاً ومؤقتاً.</string>
    <string name="show_bottom_sheet">show bottom sheet</string>
    <string name="to_load_images_fragment">to load images fragment</string>
    <string name="retrieve_data">retrieve data</string>
    <string name="store_data">store data</string>
    <string name="enter_name">enter name</string>
    <string name="rate_service">تقييم جودة الخدمة</string>
    <string name="direct_phone_call">اتصال هاتفي مباشر</string>
    <string name="direct_contact_by_whattsapp">تواصل عبر واتساب</string>
    <string name="tell_your_opinion">أخبر الآخرين برأيك لضمان تجربة أفضل للجميع دائمًا.</string>
</resources>