<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layoutDirection="rtl"
    tools:context=".FavoriteFragment">

    <ToggleButton
        android:id="@+id/red_heart"
        android:layout_width="18dp"
        android:layout_height="18dp"
        android:layout_margin="@dimen/_24sdp"
        android:background="@drawable/state_of_favorite_heart_red"
        android:padding="@dimen/_8sdp"
        android:textOff=""
        android:textOn=""
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ToggleButton
        android:id="@+id/main_color_heart"
        android:layout_width="18dp"
        android:layout_height="18dp"
        android:layout_margin="@dimen/_24sdp"
        android:background="@drawable/state_of_favorite_heart_main_color"
        android:padding="@dimen/_8sdp"
        android:textOff=""
        android:textOn=""
        app:layout_constraintStart_toEndOf="@id/red_heart"
        app:layout_constraintTop_toTopOf="parent" />


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/phone_number_et"
        style="@style/TextInputLayout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/red_heart">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/user_phone_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableEnd="@drawable/ic_phone_number"
            android:drawablePadding="@dimen/_8sdp"
            android:gravity="end"
            android:inputType="number"
            android:paddingStart="@dimen/_16sdp"
            android:textSize="@dimen/_12sdp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/whatsapp_number_et"
        style="@style/TextInputLayout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/phone_number_et">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/user_whatsapp_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableEnd="@drawable/ic_whatsapp"
            android:drawablePadding="@dimen/_8sdp"
            android:gravity="end"
            android:inputType="number"
            android:paddingStart="@dimen/_16sdp"
            android:textSize="@dimen/_12sdp" />
    </com.google.android.material.textfield.TextInputLayout>


    <TextView
        android:id="@+id/long_text_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_24sdp"
        android:layout_marginHorizontal="@dimen/_16sdp"
        android:padding="@dimen/_16sdp"
        android:text="@string/full_text"
        app:layout_constraintEnd_toEndOf="@id/whatsapp_number_et"
        app:layout_constraintStart_toStartOf="@id/whatsapp_number_et"
        app:layout_constraintTop_toBottomOf="@id/whatsapp_number_et" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/phone_number_field"
        style="@style/TextInputLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/long_text_textview">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/enter_phone_number_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/_12sdp"
            android:drawablePadding="@dimen/_8sdp"
            android:fontFamily="@font/noto_sans_arabic_medium"
            android:hint="ادخل رقم الهاتف"
            android:inputType="textEmailAddress"
            android:paddingStart="@dimen/_16sdp" />
    </com.google.android.material.textfield.TextInputLayout>



    <Button
        android:id="@+id/show_bottom_sheet_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/show_bottom_sheet"
        android:textAllCaps="false"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@id/long_text_textview"
        app:layout_constraintStart_toStartOf="@id/long_text_textview"
        app:layout_constraintEnd_toEndOf="@id/long_text_textview"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/call_by_phone_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:focusable="true"
        android:clickable="true"
        app:layout_constraintStart_toEndOf="@id/contact_by_whattsapp_number"
        android:paddingHorizontal="@dimen/_32sdp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <ImageView
            android:id="@+id/phone_ic_in_cardview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_40sdp"
            android:src="@drawable/ic_phone_number_in_cardview"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_8sdp"
            android:fontFamily="@font/noto_sans_arabic_medium"
            android:text="اتصال هاتفي مباشر"
            app:layout_constraintEnd_toEndOf="@id/phone_ic_in_cardview"
            app:layout_constraintStart_toStartOf="@id/phone_ic_in_cardview"
            app:layout_constraintTop_toBottomOf="@id/phone_ic_in_cardview" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/contact_by_whattsapp_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        app:layout_constraintEnd_toStartOf="@id/call_by_phone_number"
        android:focusable="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:clickable="true"
        android:paddingHorizontal="@dimen/_32sdp">

        <ImageView
            android:id="@+id/whattsapp_ic_in_cardview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_40sdp"
            android:src="@drawable/ic_whattsapp_in_cardview"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_8sdp"
            android:fontFamily="@font/noto_sans_arabic_medium"
            android:text="تواصل عبر واتساب"
            app:layout_constraintEnd_toEndOf="@id/whattsapp_ic_in_cardview"
            app:layout_constraintStart_toStartOf="@id/whattsapp_ic_in_cardview"
            app:layout_constraintTop_toBottomOf="@id/whattsapp_ic_in_cardview" />
    </androidx.constraintlayout.widget.ConstraintLayout>


    <Button
        android:id="@+id/go_to_load_image_fragment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_8sdp"
        app:layout_constraintTop_toBottomOf="@id/phone_number_field"
        app:layout_constraintStart_toStartOf="@id/phone_number_field"
        app:layout_constraintEnd_toEndOf="@id/phone_number_field"
        android:text="@string/to_load_images_fragment"
        android:textAllCaps="false"/>
</androidx.constraintlayout.widget.ConstraintLayout>
